--- a/src/components/ContactMe/Contact.module.scss
+++ b/src/components/ContactMe/Contact.module.scss
@@ -1,17 +1,29 @@
 .contactContainer {
+    position: relative;
     padding: 2rem;
-    background-color: #f9f9f9;
+    background-color: rgba(230, 221, 221, 0.5); 
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px); 
 }
 
 .title {
+    margin-bottom: 1rem;
     text-align: center;
-    margin-bottom: 2rem;
+    color: rgba(42, 41, 41, 0.1);
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    opacity: 0.5;
+}
+
+.comingSoonMessage {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    color: #ff1744; 
+    font-weight: bold;
+    text-align: center;
 }
